fixed issue with fake log in and log out, toggling class '.invisible' to nav items

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -87,6 +87,10 @@ $dark-texts-color: #707070;
                     margin-right: 8px;
                     transition: all 0.3s;
 
+                    &.invisible {
+                        display: none;
+                    }
+
                     &.right-nav {
                         margin-right: 0px;
                         margin-left: auto;
